--- a/customer_churn_predictML.ipynb
+++ b/customer_churn_predictML.ipynb
@@ -2582,11 +2582,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "id": "-TrPm9xmJNpZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The parameters combination that would give best F1 score is : \n",
+      "{'criterion': 'gini', 'max_depth': 16, 'min_samples_leaf': 6, 'min_samples_split': 8, 'n_estimators': 10}\n",
+      "The best accuracy achieved after parameter tuning via grid search is: 0.580\n",
+      "The accuracy of the model against the training data is: 0.677\n",
+      "F1 score:  0.5595116988809766\n"
+     ]
+    }
+   ],
    "source": [
     "# hyperparameter optimization for Random Forest classifier\n",
     "# define the hyperparameter to tune\n",
@@ -2614,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "id": "zb01edKyRCIb"
    },
@@ -2657,11 +2669,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "id": "fGwmZiYQRCIc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The random forest classifier had the best \u001b[1mF1 score of 0.544 \u001b[0musing\u001b[1m n_estimate value of 10,\u001b[0m\u001b[1m maximum tree depth of 16\u001b[0m giving an accuracy of \u001b[1m89.76% for the training set \u001b[0mand \u001b[1m85.23% for the test set\u001b[0m\n",
+      "\n",
+      "\u001b[1mF1 score: \u001b[0m 0.544\n",
+      "\u001b[1mAccuracy Score: \u001b[0m 85.23%\n",
+      "\u001b[1mPrecision: \u001b[0m 0.765\n",
+      "\u001b[1mRecall: \u001b[0m 0.422\n",
+      "\u001b[1mBalanced Accuracy Score: \u001b[0m 69.38%\n",
+      "\u001b[1mROC AUC Score: \u001b[0m 69.38%\n",
+      "\n",
+      "\u001b[1mConfusion Matrix\u001b[0m\n",
+      "--------------------------------------------------\n",
+      "[[2293   81]\n",
+      " [ 362  264]]\n",
+      "\n",
+      "\u001b[1mClassification report\u001b[0m\n",
+      "--------------------------------------------------\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.97      0.91      2374\n",
+      "           1       0.77      0.42      0.54       626\n",
+      "\n",
+      "    accuracy                           0.85      3000\n",
+      "   macro avg       0.81      0.69      0.73      3000\n",
+      "weighted avg       0.84      0.85      0.84      3000\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# determine accuracy for random forest classifier\n",
     "random_forest_classifier(features_train, target_train, features_test, target_test)"
@@ -2673,7 +2718,7 @@
     "id": "JSiH7VjVZQPj"
    },
    "source": [
-    "We tuned the `max_depth` and `n_estimators` for the Random Forest classifier resulting in an accuracy of 95.43% for the training set, and 86.25% for the testing sets when using 16 trees."
+    "We tuned the `max_depth` and `n_estimators` for the Random Forest classifier resulting in an F1 score of 0.54, accuracy of 89.76% for the training set, and 85.23% for the testing sets when using 16 trees and n_estimate value of 10."
    ]
   },
   {
@@ -2775,7 +2820,7 @@
     "|Decision Tree  | 0.54 | 84.53% | 69.23% |\n",
     "|Logistic Regression  | 0.31 | 80.17% | 58.36% |\n",
     "|Adaboost | 0.56 | 85.17% | 70.69% |\n",
-    "|Random Forest | 0.582| 86.23% | 71.36% |\n",
+    "|Random Forest | 0.54| 85.23% | 69.38% |\n",
     "|Catboost | 0.59| 86.07% | 71.85% |\n",
     "\n"
    ]
